force-app/main/default/objects/Merchant__mdt/Merchant__mdt.object-meta.xml
<CustomObject>
    <description>Represents a Merchant used in the Adyen interface. The Merchant record contains all connection params</description>
    <fields>
        <fullName>AdyenMerchantConfig__c</fullName>
        <label>AdyenMerchantConfig</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationInfo_SI__c</fullName>
        <description>Merchant&apos;s System Integrator</description>
        <label>ApplicationInfo_SI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client_Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adyen mode Live or Test</description>
        <label>Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <description>Name of the Merchant, passed to the Adyen API as such</description>
        <inlineHelpText>Name of the Merchant, passed to the Adyen API as such</inlineHelpText>
        <label>Merchant Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Merchant</label>
    <pluralLabel>Merchants</pluralLabel>
</CustomObject>