force-app/main/default/objects/Merchant__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Used as the X-API-KEY header in Adyen requests</description>
    <inlineHelpText>Used as the X-API-KEY header in Adyen requests</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>