force-app/main/default/objects/Merchant__mdt/fields/Authorise_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorise_Endpoint__c</fullName>
    <defaultValue>&quot;https://checkout-test.adyen.com/v65/&quot;</defaultValue>
    <description>Endpoint to which the Adyen Authorise service is mounted</description>
    <inlineHelpText>Endpoint to which the Adyen Authorise service is mounted</inlineHelpText>
    <label>Authorise Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>