force-app/main/default/objects/Merchant__mdt/fields/Capture_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Capture_Endpoint__c</fullName>
    <description>Endpoint of the Adyen capture service</description>
    <inlineHelpText>Endpoint of the Adyen capture service</inlineHelpText>
    <label>Capture Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>