force-app/main/default/objects/Merchant__mdt/fields/Disable_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Disable_Endpoint__c</fullName>
    <defaultValue></defaultValue>
    <description>Endpoint to which the Adyen Disable service is mounted</description>
    <inlineHelpText>Endpoint to which the Adyen Disable service is mounted</inlineHelpText>
    <label>Disable Endpoint</label>
    <type>Url</type>
</CustomField>