force-app/main/default/objects/Merchant__mdt/fields/Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account__c</fullName>
    <description>Name of the Merchant, passed to the Adyen API as such</description>
    <inlineHelpText>Name of the Merchant, passed to the Adyen API as such</inlineHelpText>
    <label>Merchant Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>