force-app/main/default/objects/Merchant__mdt/fields/Payment_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Payment_Endpoint__c</fullName>
    <defaultValue>&quot;https://checkout-test.adyen.com/v66/&quot;</defaultValue>
    <description>Endpoint to which the Adyen Payment service is mounted</description>
    <inlineHelpText>Endpoint to which the Adyen Payment service is mounted</inlineHelpText>
    <label>Payment Endpoint</label>
    <type>Url</type>
</CustomField>