force-app/main/default/objects/Merchant__mdt/fields/PaymentMethods_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethods_Endpoint__c</fullName>
    <defaultValue>&quot;https://checkout-test.adyen.com/v65/&quot;</defaultValue>
    <description>Endpoint to retrieve paymentMethods from Adyen</description>
    <inlineHelpText>Endpoint to retrieve paymentMethods from Adyen</inlineHelpText>
    <label>PaymentMethods Endpoint</label>
    <type>Url</type>
</CustomField>