force-app/main/default/objects/Merchant__mdt/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Optional local reference passed to Adyen when Authorising Payments.</description>
    <inlineHelpText>Optional local reference passed to Adyen when Authorising Payments.</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>